[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/styles/theme_main.tres" type="Theme" id=1]
[ext_resource path="res://gui/menu_options/options_slider.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/fonts/montserrat_regular_30.tres" type="DynamicFont" id=3]
[ext_resource path="res://gui/menu_options/options_main.gd" type="Script" id=4]
[ext_resource path="res://audio/cardPlace1.ogg" type="AudioStream" id=5]
[ext_resource path="res://gui/fonts/montserrat_regular_12.tres" type="DynamicFont" id=6]

[node name="OptionsMain" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 1021.0
margin_bottom = 597.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 998.0
margin_bottom = 574.0

[node name="Volume" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 978.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Volume"

[node name="Master" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 42.0
margin_right = 978.0
margin_bottom = 68.0

[node name="Name" parent="MarginContainer/VBoxContainer/Master" index="0"]
margin_top = 0.0
margin_bottom = 26.0
text = "Master"

[node name="HSlider" parent="MarginContainer/VBoxContainer/Master" index="1"]
margin_right = 978.0
margin_bottom = 26.0

[node name="Music" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 72.0
margin_right = 978.0
margin_bottom = 98.0

[node name="Name" parent="MarginContainer/VBoxContainer/Music" index="0"]
margin_top = 0.0
margin_bottom = 26.0
text = "Music"

[node name="HSlider" parent="MarginContainer/VBoxContainer/Music" index="1"]
margin_right = 978.0
margin_bottom = 26.0

[node name="Effects" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 102.0
margin_right = 978.0
margin_bottom = 128.0

[node name="Name" parent="MarginContainer/VBoxContainer/Effects" index="0"]
margin_top = 0.0
margin_bottom = 26.0
text = "Effects"

[node name="HSlider" parent="MarginContainer/VBoxContainer/Effects" index="1"]
margin_right = 978.0
margin_bottom = 26.0

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 978.0
margin_bottom = 164.0

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
margin_right = 487.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Cancel"

[node name="OK" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
margin_left = 491.0
margin_right = 978.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "OK"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 978.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 6 )
text = "Music from https://www.bensound.com"

[node name="MusicTestSound" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="SfxTestSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sfx"

[editable path="MarginContainer/VBoxContainer/Master"]

[editable path="MarginContainer/VBoxContainer/Music"]

[editable path="MarginContainer/VBoxContainer/Effects"]
